increased memory limits for running tests