@@ -223,6 +223,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
+					<argLine>-Xmx512m -XX:MaxPermSize=128m</argLine>
 					<includes>
 						<include>**/*Test.java</include>
 						<include>${acceptance.tests}</include>
